Implementation of css3-background (partial, missing background-color and background, also borders not done) cf. http://www.w3.org/TR/2009/CR-css3-background-20091217/
moved and corrected implementation of css3-multicol
cf. http://www.w3.org/TR/2009/CR-css3-multicol-20091217/

Some reorganization of code.